<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>svl_robot_bringup</name>
  <version>0.0.0</version>
  <description>A ROS2 package for running robot simulations with the SVL Simulator</description>
  <maintainer email="hadi.tabatabaee@lge.com">Hadi Tabatabaee</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>lgsvl_bridge</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
